--- a/myapp/www/index.html
+++ b/myapp/www/index.html
@@ -143,9 +143,9 @@
 			var vdef = 0;
 			var lifes = 3;
 			
-			document.addEventListener('mousemove',function(evt){
+			document.addEventListener('touchemove',function(evt){
 				if(Controls == 1 && pause == 0){
-					x = evt.clientX;
+					x = evt.touches[0].pageX;
 					if(x > 270)x=270;
 				}
 			},false)
